2011-12-09  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add cpp/src/RigidRegistration2D.cxx (v0.1.0):
	* cpp/src/CMakeLists.txt:
	* cpp/README

	- Program to align one 2D image to another using a rigid
	transformation (rotation and translation).

2011-11-25  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* Add matlab/FiltersToolbox/Deconvolve.cpp (v0.1.0):

	- MEX interface to the Clarity deconvolution library. C++
	implementation.

	* Add matlab/FiltersToolbox/deconvolve.m (v0.1.0):

	- MEX interface to the Clarity deconvolution library. Matlab
	helper file.

	* matlab/FiltersToolbox/CMakeLists.txt:

	- Now third-party libraries are installed in gerardus/lib. In
	particular, Clarity is no longer compiled into its source
	directory.

	- Make Clarity a dependency of deconvolve.

	* matlab/CMakeLists.txt, CMakeLists.txt:

	- Move the manual selection of older compilers from
	matlab/CMakeLists.txt to the root CMakeLists.txt. Also note that
	CMAKE_CC_COMPILER is incorrect, the variable is called
	CMAKE_C_COMPILER.

	* Add lib directory to install third-party libraries.

2011-11-24  Ramon Casero  <ramon.casero@cs.ox.ac.uk>

	* cpp/src/third-party/cquammen-Clarity/CMakeLists.txt:

	- We don't need to build the apps and tests of Clarity, comment
	out.

	- Now Clarity will be built in the build tree, instead of the src
	directory, and installed with `make install` to gerardus/lib.

	* CMakeLists.txt:

	- Set CMake install path to gerardus/lib, so that we have
	everything in one place (except for the MEX files, that stay in
	their respective subdirectories).

	- Move the rpath block to this file from matlab/CMakeLists.txt, as
	we need it also to link MEX files to Clarity, and probably for
	future libraries.

	* matlab/CMakeLists.txt:

	- Move the rpath block to CMakeLists.txt, as we need it also to
	link MEX files to Clarity, and probably for future libraries.

	- Upgrade CMake requirement to v2.8.

	- Change CMAKE_SOURCE_DIR to CMAKE_CURRENT_SOURCE_DIR so that it